# pyPLD

./: README.md  pyproject.toml
Toutorials/1 - Import pluma and simulate film/: 1 - Import plume and simulate film.ipynb  210217TiO2_18K_rotating_notoptimal_MAP_taketwo.txt
Toutorials/3 - Simulate combinatorial film/: Cr2O3_MAP_basedon4points_Bsplinemodel_100sccmO2.txt
src/pypld/: pyPLD.py
tutorials/2 - Optimize film for flatness/: 2 - Optimize film for flatness.ipynb  210222_TiO2_18k_rotating_optimalposition.txt  TiO2_100sccmO2_onSI_15000pulses_MAP1.txt
tutorials/3 - Simulate combinatorial film/: 3 - Simulate combinatorial film.ipynb
