[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypld"
version = "0.1.0"
description = "a package for simulating thin films deposited by pulsed laser deposition"
authors = [
  { name="Hogne Lysne", email="hogne.lysne@ntnu.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = "EUPL-1.2"

dependencies = [
  'numpy >=1.24.1, <2',
  'scipy >=1.10.0, <2',
  'scikit-image >= 0.19.3, <1',
  'matplotlib >= 3.6.3, <4',
]

[project.urls]
"Homepage" = "https://github.com/hognely/pyPLD"